--- a/Module 1/PT Labs/1.0.5-packet-tracer---logical-and-physical-mode-exploration.md
+++ b/Module 1/PT Labs/1.0.5-packet-tracer---logical-and-physical-mode-exploration.md
@@ -1,34 +1,33 @@
 # Packet Tracer Lab Template
 ## Lab Title
-_Enter the name of the lab here_
+1.0.5 packet tracer lab
 
 ## Student Name
-_Your full name_
+melinda williams
 
 ## Date Completed
-_YYYY-MM-DD_
+08-17-25
 
 ---
 
 ## Lab Summary
-
-_Provide a brief summary of what the lab was about. What was the goal or objective?_
+create a physical and logical topology in packet tracer of endpoints,router,firewall into a cloud. aliging the networks accordingly so they properly communicate accordingly
 
 ---
 
 ## Reflection Questions
 
 ### 1. What did you do in this lab?
-_Describe the steps you took and the tasks you completed._
+set up  my endpoints with a straight through cable from my endpoint to the router being on the same network of 192.168.20.x.
 
 ### 2. What did you learn?
-_Explain the concepts or skills you gained from this lab._
+knowing which cables to use to connect the devices up the chain
 
 ### 3. What did you struggle with or not fully understand?
-_Identify any parts of the lab that were confusing or challenging._
+a proper layout of the lab wanting to be done, just committed to the most basic version but was unsure what all appliances entailed
 
 ### 4. What suggestions do you have to improve this lab experience?
-_Offer feedback on how the lab could be clearer, more engaging, or better supported._
+i wouldve preferred to see an example done of the topology and what exactly to look for and do so i knoew what to look for when putting everything together. It is a little foggy how to fully go thru the process so i want a brush up on it for better troubleshooting skills in the future
 
 ---
 
